--- a/index.html
+++ b/index.html
@@ -12,69 +12,103 @@
     <title>WebStusio</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="navigation">
-        <a class="logo link" href=""
-          ><p lang="en"><span class="logo-tittel">Web</span>Studio</p></a
-        >
-        <ul class="navigation-list list">
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="./portfolio.html"
-              >Портфолио</a
-            >
-          </li>
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-adress">
-        <a class="header-link link" href="malto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="header-link link" href="tel:+380961111111"
-          >+38 096 111 11 11</a
-        >
-      </address>
+    <header class="header container">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo link" href="">
+            <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
+          </a>
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./index.html"
+                >Студия</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-adress">
+          <a class="header-link link" href="malto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </header>
     <main>
       <!--hero-->
-      <section>
-        <h1 class="hero-titel">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button class="model-btn" type="button">Заказать услугу</button>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-titel">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button class="model-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- о нас -->
       <section class="description">
         <h2 hidden>О нас</h2>
-        <ul class="list">
-          <li>
+        <ul class="list container">
+          <li class="description-list">
+            <img
+              class="description-img"
+              src="./images/Group.svg"
+              alt="антена"
+              width="70"
+              height="70"
+            />
             <h3 class="description-titel">Внимание к деталям</h3>
             <p class="description-titel-item">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="description-list">
+            <img
+              class="description-img"
+              src="./images/group clock 1.svg"
+              alt="clock"
+              width="70"
+              height="70"
+            />
             <h3 class="description-titel">Пунктуальность</h3>
             <p class="description-titel-item">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="description-list">
+            <img
+              class="description-img"
+              src="./images/diagram 1.svg"
+              alt="diagram"
+              width="70"
+              height="70"
+            />
             <h3 class="description-titel">Планирование</h3>
             <p class="description-titel-item">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="description-list">
+            <img
+              class="description-img"
+              src="./images/astronaut 1 (1).svg"
+              alt="astronaut"
+              width="70"
+              height="70"
+            />
             <h3 class="description-titel">Современные технологии</h3>
             <p class="description-titel-item">
               Значимость этих проблем настолько очевидна, что реализация
@@ -86,8 +120,8 @@
       <!-- Чем мы занимаемся -->
       <section class="work">
         <h2 class="work-titel">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
+        <ul class="list container">
+          <li class="work-list">
             <p class="work-titel-item">Десктопные приложения</p>
             <img
               src="./images/laptop-pictur.png"
@@ -96,7 +130,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-list">
             <p class="work-titel-item">Мобильные приложения</p>
             <img
               src="./images/mobile-phone-picture.png"
@@ -105,7 +139,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-list">
             <p class="work-titel-item">Дизайнерские решения</p>
             <img
               src="./images/monitor-picture.png"
