--- a/index.html
+++ b/index.html
@@ -57,280 +57,290 @@
       </section>
       <!-- о нас -->
       <section class="description">
-        <h2 hidden>О нас</h2>
-        <ul class="list container">
-          <li class="description-list">
-            <img
-              class="description-img"
-              src="./images/Group.svg"
-              alt="антена"
-              width="70"
-              height="70"
-            />
-            <h3 class="description-titel">Внимание к деталям</h3>
-            <p class="description-titel-item">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="description-list">
-            <img
-              class="description-img"
-              src="./images/group clock 1.svg"
-              alt="clock"
-              width="70"
-              height="70"
-            />
-            <h3 class="description-titel">Пунктуальность</h3>
-            <p class="description-titel-item">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="description-list">
-            <img
-              class="description-img"
-              src="./images/diagram 1.svg"
-              alt="diagram"
-              width="70"
-              height="70"
-            />
-            <h3 class="description-titel">Планирование</h3>
-            <p class="description-titel-item">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="description-list">
-            <img
-              class="description-img"
-              src="./images/astronaut 1 (1).svg"
-              alt="astronaut"
-              width="70"
-              height="70"
-            />
-            <h3 class="description-titel">Современные технологии</h3>
-            <p class="description-titel-item">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>О нас</h2>
+          <ul class="description-titel-list list">
+            <li class="description-list">
+              <img
+                class="description-img"
+                src="./images/Group.svg"
+                alt="антена"
+                width="70"
+                height="70"
+              />
+              <h3 class="description-titel">Внимание к деталям</h3>
+              <p class="description-titel-item">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="description-list">
+              <img
+                class="description-img"
+                src="./images/group clock 1.svg"
+                alt="clock"
+                width="70"
+                height="70"
+              />
+              <h3 class="description-titel">Пунктуальность</h3>
+              <p class="description-titel-item">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="description-list">
+              <img
+                class="description-img"
+                src="./images/diagram 1.svg"
+                alt="diagram"
+                width="70"
+                height="70"
+              />
+              <h3 class="description-titel">Планирование</h3>
+              <p class="description-titel-item">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="description-list">
+              <img
+                class="description-img"
+                src="./images/astronaut 1 (1).svg"
+                alt="astronaut"
+                width="70"
+                height="70"
+              />
+              <h3 class="description-titel">Современные технологии</h3>
+              <p class="description-titel-item">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем мы занимаемся -->
       <section class="work">
-        <h2 class="work-titel">Чем мы занимаемся</h2>
-        <ul class="list container">
-          <li class="work-list">
-            <p class="work-titel-item">Десктопные приложения</p>
-            <img
-              src="./images/laptop-pictur.png"
-              alt="laptop picture"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="work-list">
-            <p class="work-titel-item">Мобильные приложения</p>
-            <img
-              src="./images/mobile-phone-picture.png"
-              alt="mobile phone picture"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="work-list">
-            <p class="work-titel-item">Дизайнерские решения</p>
-            <img
-              src="./images/monitor-picture.png"
-              alt="monitor picture"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-titel">Чем мы занимаемся</h2>
+          <ul class="work-titel-list list">
+            <li class="work-list">
+              <p class="work-titel-item">Десктопные приложения</p>
+              <img
+                src="./images/laptop-pictur.png"
+                alt="laptop picture"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-list">
+              <p class="work-titel-item">Мобильные приложения</p>
+              <img
+                src="./images/mobile-phone-picture.png"
+                alt="mobile phone picture"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-list">
+              <p class="work-titel-item">Дизайнерские решения</p>
+              <img
+                src="./images/monitor-picture.png"
+                alt="monitor picture"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
       <section class="comand">
-        <h2 class="comand-titel">Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/Nikolay-Kucherenko.jpg"
-              alt="foto Nikolay Kucherenko "
-              width="270"
-              height="260"
-            />
-            <h3 class="comand-titel-name">Николай Кучеренко</h3>
-            <p class="comand-titel-name-item">Product Designer</p>
-            <ul class="comand-link list">
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="instagram link"
-                  >instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="twitter link"
-                  >twitter</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="facebook link"
-                  >facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="linkedin link"
-                  >linkedin</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/Olga-Ivanova.jpg"
-              alt="foto Olga Ivanova "
-              width="270"
-              height="260"
-            />
-            <h3 class="comand-titel-name">Ольга Иванова</h3>
-            <p class="comand-titel-name-item">Frontend Developer</p>
-            <ul class="comand-link list">
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="instagram link"
-                  >instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="twitter link"
-                  >twitter</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="facebook link"
-                  >facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="linkedin link"
-                  >linkedin</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/Andrey-Shevchenko.jpg"
-              alt="foto Andrey Shevchenko "
-              width="270"
-              height="260"
-            />
-            <h3 class="comand-titel-name">Андрей Шевченко</h3>
-            <p class="comand-titel-name-item">Marketing</p>
-            <ul class="comand-link list">
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="instagram link"
-                  >instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="twitter link"
-                  >twitter</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="facebook link"
-                  >facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="linkedin link"
-                  >linkedin</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/Ivan-Nikolaev.jpg"
-              alt="foto Ivan Nikolaev "
-              width="270"
-              height="260"
-            />
-            <h3 class="comand-titel-name">Иван Николаев</h3>
-            <p class="comand-titel-name-item">UI Designer</p>
-            <ul class="comand-link list">
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="twitter link"
-                  >twitter</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="facebook link"
-                  >facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="instagram link"
-                  >instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  class="comand-link-list link"
-                  href=""
-                  aria-label="linkedin link"
-                  >linkedin</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="comand-titel">Наша команда</h2>
+          <ul class="comand-titel-list list">
+            <li class="comand-titel-item">
+              <img
+                class="comand-img"
+                src="./images/Nikolay-Kucherenko.jpg"
+                alt="foto Nikolay Kucherenko "
+                width="270"
+                height="260"
+              />
+              <h3 class="comand-titel-name">Николай Кучеренко</h3>
+              <p class="comand-titel-name-item">Product Designer</p>
+              <ul class="comand-link list">
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="instagram link"
+                    >instagram</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="twitter link"
+                    >twitter</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="facebook link"
+                    >facebook</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="linkedin link"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="comand-titel-item">
+              <img
+                class="comand-img"
+                src="./images/Olga-Ivanova.jpg"
+                alt="foto Olga Ivanova "
+                width="270"
+                height="260"
+              />
+              <h3 class="comand-titel-name">Ольга Иванова</h3>
+              <p class="comand-titel-name-item">Frontend Developer</p>
+              <ul class="comand-link list">
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="instagram link"
+                    >instagram</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="twitter link"
+                    >twitter</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="facebook link"
+                    >facebook</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="linkedin link"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="comand-titel-item">
+              <img
+                class="comand-img"
+                src="./images/Andrey-Shevchenko.jpg"
+                alt="foto Andrey Shevchenko "
+                width="270"
+                height="260"
+              />
+              <h3 class="comand-titel-name">Андрей Шевченко</h3>
+              <p class="comand-titel-name-item">Marketing</p>
+              <ul class="comand-link list">
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="instagram link"
+                    >instagram</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="twitter link"
+                    >twitter</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="facebook link"
+                    >facebook</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="linkedin link"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="comand-titel-item">
+              <img
+                class="comand-img"
+                src="./images/Ivan-Nikolaev.jpg"
+                alt="foto Ivan Nikolaev "
+                width="270"
+                height="260"
+              />
+              <h3 class="comand-titel-name">Иван Николаев</h3>
+              <p class="comand-titel-name-item">UI Designer</p>
+              <ul class="comand-link list">
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="twitter link"
+                    >twitter</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="facebook link"
+                    >facebook</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="instagram link"
+                    >instagram</a
+                  >
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="linkedin link"
+                    >linkedin</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--наши-->
       <section>
