--- a/index.html
+++ b/index.html
@@ -343,64 +343,66 @@
         </div>
       </section>
       <!--наши-->
-      <section>
-        <h2 class="client-titel">Постоянные клиенты</h2>
-        <ul class="list">
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-1.svg"
-                alt="Client 1"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-2.svg"
-                alt="Client 2"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-3.svg"
-                alt="Client 3"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-4.svg"
-                alt="Client 4"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-5.svg"
-                alt="Client 5"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./images/Client-6.svg"
-                alt="Client 6"
-                width="80"
-                height="42"
-            /></a>
-          </li>
-        </ul>
+      <section class="client">
+        <div class="container">
+          <h2 class="client-titel">Постоянные клиенты</h2>
+          <ul class="client-item list">
+            <li class="client-item-link">
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-1.svg"
+                  alt="Client 1"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+            <li class="client-item-link">
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-2.svg"
+                  alt="Client 2"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+            <li class="client-item-link">
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-3.svg"
+                  alt="Client 3"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+            <li class="client-item-link">
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-4.svg"
+                  alt="Client 4"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+            <li>
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-5.svg"
+                  alt="Client 5"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+            <li>
+              <a class="client-item-link-list" href=""
+                ><img
+                  src="./images/Client-6.svg"
+                  alt="Client 6"
+                  width="80"
+                  height="42"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
