--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                   height="42"
               /></a>
             </li>
-            <li>
+            <li class="client-item-link">
               <a class="client-item-link-list" href=""
                 ><img
                   src="./images/Client-5.svg"
@@ -405,69 +405,80 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div>
-        <a class="logo link" href="">
-          <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
-        </a>
-        <ul class="list">
-          <li>
-            <address class="footer-adress">
-              <a
-                class="footer-link link"
-                href="https://goo.gl/maps/3zYcZQHt294xr5mG9"
-                target="_blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </address>
-          </li>
-          <li>
-            <address class="footer-adress">
-              <a class="footer-link-item link" href="malto:info@example.com"
-                >info@example.com</a
-              >
-            </address>
-          </li>
-          <li>
-            <address class="footer-adress">
-              <a class="footer-link-item link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </address>
-          </li>
-        </ul>
-      </div>
+    <footer class="footer">
+      <div class="container footer-wraper">
+        <div class="footer-adress-link">
+          <a class="logo link footer-logo" href="">
+            <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
+          </a>
+          <ul class="list">
+            <li>
+              <address class="footer-adress">
+                <a
+                  class="footer-link link"
+                  href="https://goo.gl/maps/3zYcZQHt294xr5mG9"
+                  target="_blank"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </address>
+            </li>
+            <li>
+              <address class="footer-adress">
+                <a class="footer-link-item link" href="malto:info@example.com"
+                  >info@example.com</a
+                >
+              </address>
+            </li>
+            <li>
+              <address class="footer-adress">
+                <a class="footer-link-item link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </address>
+            </li>
+          </ul>
+        </div>
 
-      <div>
-        <b class="footer-item">присоединяйтесь</b>
-        <ul class="list">
-          <li>
-            <a
-              class="footer-label-link link"
-              href=""
-              aria-label="instagram link"
-              >instagram</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="twitter link"
-              >twitter</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="facebook link"
-              >facebook</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="linkedin link"
-              >linkedin</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div>
-        <b class="footer-item">Подпишитесь на рассылку</b>
+        <div class="footer-social-link">
+          <b class="footer-item">присоединяйтесь</b>
+          <ul class="footer-social-list list">
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="instagram link"
+                >instagram</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="twitter link"
+                >twitter</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="facebook link"
+                >facebook</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="linkedin link"
+                >linkedin</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer-bth">
+          <b class="footer-item">Подпишитесь на рассылку</b>
+        </div>
       </div>
     </footer>
   </body>
