--- a/portfolio.html
+++ b/portfolio.html
@@ -13,47 +13,52 @@
   </head>
 
   <body>
-    <header class="header">
-      <nav class="navigation">
-        <a class="logo link" href="">
-          <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
-        </a>
-        <ul class="navigation-list list">
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="./portfolio.html"
-              >Портфолио</a
-            >
-          </li>
-          <li class="navigation-ist-item">
-            <a class="navigaion-list-link link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-adress">
-        <a class="header-link link" href="malto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="header-link link" href="tel:+380961111111"
-          >+38 096 111 11 11</a
-        >
-      </address>
+    <header class="header container">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo link" href="">
+            <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
+          </a>
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./index.html"
+                >Студия</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-list-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-adress">
+          <a class="header-link link" href="malto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </header>
+
     <main>
       <!--Наши работы-->
-      <section>
+      <section class="container">
         <h1 hidden>Наши работы</h1>
-        <ul class="list">
+        <ul class="main-item list">
           <li><button class="main-btn" type="button">Все</button></li>
           <li><button class="main-btn" type="button">Веб-сайты</button></li>
           <li><button class="main-btn" type="button">Приложения</button></li>
           <li><button class="main-btn" type="button">Дизайн</button></li>
           <li><button class="main-btn" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="list">
-          <li>
+        <ul class="main-jobs list">
+          <li class="main-jobs-item">
             <a class="link" href="">
               <img
                 src="./images/technocrak.jpg"
@@ -70,7 +75,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/poster-basketbol.jpg"
@@ -87,7 +92,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/restoran-seafood.jpg"
@@ -104,7 +109,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/headphones.jpg"
@@ -121,7 +126,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/boxes.jpg"
@@ -138,7 +143,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/monitor.jpg"
@@ -155,7 +160,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/books.jpg"
@@ -172,7 +177,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/label.jpg"
@@ -189,7 +194,7 @@
               </p></a
             >
           </li>
-          <li>
+          <li class="main-jobs-item">
             <a class="link" href=""
               ><img
                 src="./images/noutbook.jpg"
@@ -209,69 +214,81 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div>
-        <a class="logo link" href="">
-          <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
-        </a>
-        <ul class="list">
-          <li>
-            <address class="footer-adress">
-              <a
-                class="footer-link link"
-                href="https://goo.gl/maps/3zYcZQHt294xr5mG9"
-                target="_blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </address>
-          </li>
-          <li>
-            <address class="footer-adress">
-              <a class="footer-link-item link" href="malto:info@example.com"
-                >info@example.com</a
-              >
-            </address>
-          </li>
-          <li>
-            <address class="footer-adress">
-              <a class="footer-link-item link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </address>
-          </li>
-        </ul>
-      </div>
 
-      <div>
-        <b class="footer-item">присоединяйтесь</b>
-        <ul class="list">
-          <li>
-            <a
-              class="footer-label-link link"
-              href=""
-              aria-label="instagram link"
-              >instagram</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="twitter link"
-              >twitter</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="facebook link"
-              >facebook</a
-            >
-          </li>
-          <li>
-            <a class="footer-label-link link" href="" aria-label="linkedin link"
-              >linkedin</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div>
-        <b class="footer-item">Подпишитесь на рассылку</b>
+    <footer class="footer">
+      <div class="container footer-wraper">
+        <div class="footer-adress-link">
+          <a class="logo link footer-logo" href="">
+            <p lang="en"><span class="logo-tittel">Web</span>Studio</p>
+          </a>
+          <ul class="list">
+            <li>
+              <address class="footer-adress">
+                <a
+                  class="footer-link link"
+                  href="https://goo.gl/maps/3zYcZQHt294xr5mG9"
+                  target="_blank"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </address>
+            </li>
+            <li>
+              <address class="footer-adress">
+                <a class="footer-link-item link" href="malto:info@example.com"
+                  >info@example.com</a
+                >
+              </address>
+            </li>
+            <li>
+              <address class="footer-adress">
+                <a class="footer-link-item link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </address>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-social-link">
+          <b class="footer-item">присоединяйтесь</b>
+          <ul class="footer-social-list list">
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="instagram link"
+                >instagram</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="twitter link"
+                >twitter</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="facebook link"
+                >facebook</a
+              >
+            </li>
+            <li class="footer-social-list-link">
+              <a
+                class="footer-label-link link"
+                href=""
+                aria-label="linkedin link"
+                >linkedin</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer-bth">
+          <b class="footer-item">Подпишитесь на рассылку</b>
+        </div>
       </div>
     </footer>
   </body>
