--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,7 @@
           <li class="main-jobs-item">
             <a class="link" href="">
               <img
+                class="main-jobs-item-link"
                 src="./images/technocrak.jpg"
                 alt="изображение страницы сайта"
                 width="370"
@@ -78,6 +79,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/poster-basketbol.jpg"
                 alt="постер с баскетболистами"
                 width="370"
@@ -95,6 +97,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/restoran-seafood.jpg"
                 alt="логотип рестарана"
                 width="370"
@@ -112,6 +115,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/headphones.jpg"
                 alt="наушники"
                 width="370"
@@ -129,6 +133,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/boxes.jpg"
                 alt="две коробки"
                 width="370"
@@ -146,6 +151,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/monitor.jpg"
                 alt="фотография монитора"
                 width="370"
@@ -163,6 +169,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/books.jpg"
                 alt="книга"
                 width="370"
@@ -180,6 +187,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/label.jpg"
                 alt="Этикетка"
                 width="370"
@@ -197,6 +205,7 @@
           <li class="main-jobs-item">
             <a class="link" href=""
               ><img
+                class="main-jobs-item-link"
                 src="./images/noutbook.jpg"
                 alt="работает на ноутбуке"
                 width="370"
