--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,24 @@
 
     <main>
       <!--Наши работы-->
-      <section class="container">
+      <section class="jobs container">
         <h1 hidden>Наши работы</h1>
         <ul class="main-item list">
-          <li><button class="main-btn" type="button">Все</button></li>
-          <li><button class="main-btn" type="button">Веб-сайты</button></li>
-          <li><button class="main-btn" type="button">Приложения</button></li>
-          <li><button class="main-btn" type="button">Дизайн</button></li>
-          <li><button class="main-btn" type="button">Маркетинг</button></li>
+          <li class="main-item-list">
+            <button class="main-btn" type="button">Все</button>
+          </li>
+          <li class="main-item-list">
+            <button class="main-btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="main-item-list">
+            <button class="main-btn" type="button">Приложения</button>
+          </li>
+          <li class="main-item-list">
+            <button class="main-btn" type="button">Дизайн</button>
+          </li>
+          <li class="main-item-list">
+            <button class="main-btn" type="button">Маркетинг</button>
+          </li>
         </ul>
         <ul class="main-jobs list">
           <li class="main-jobs-item">
